--- a/style.css
+++ b/style.css
@@ -183,6 +183,8 @@ section {
 }
 .imgset img
 {
+    width: 100%;
+    height: 565px;
    box-shadow: 0px 6px 11px 7px rgba(0, 0, 0, 0.22);
    border-radius: 5px;
 }
@@ -191,4 +193,15 @@ section {
 .card .footer p{
     text-align: right !important;
     font-family: 'Cookie', cursive;
+}
+
+@media (max-width: 768px) {
+    .card {
+        width: 100%;
+        height: auto;
+    }
+
+    .imgset img {
+        height: unset;
+    }
 }
